--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.datasource.url=jdbc:postgresql://db.estgxlyuaqjywadmdjlr.supabase.co:5432/postgres
+spring.jpa.database=postgresql
+spring.jpa.show-sql=false
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=shXoz0fLqVMydBzo 
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.format_sql=true
