--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
-spring.datasource.url=jdbc:postgresql://db.estgxlyuaqjywadmdjlr.supabase.co:5432/postgres
-spring.jpa.database=postgresql
-spring.jpa.show-sql=false
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=postgres
-spring.datasource.password=shXoz0fLqVMydBzo 
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.url = jdbc:postgresql://db.estgxlyuaqjywadmdjlr.supabase.co:5432/postgres
+spring.datasource.username= postgres
+spring.datasource.password= shXoz0fLqVMydBzo
+
+spring.jpa.show-sql= true
+spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.PostgreSQL95Dialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
+spring.jpa.hibernate.ddl-auto = update
+
+
+spring.mvc.format.date = yyyy-MM-dd
