Product Final - Vprogress - All

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,7 @@ spring.datasource.url = jdbc:postgresql://db.estgxlyuaqjywadmdjlr.supabase.co:54
 spring.datasource.username= postgres
 spring.datasource.password= shXoz0fLqVMydBzo
 
-spring.jpa.show-sql= true
-spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.PostgreSQL95Dialect
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
-spring.jpa.hibernate.ddl-auto = update
-
-
-spring.mvc.format.date = yyyy-MM-dd
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.security.oauth2.client.registration.google.client-id=891333183816-q2pe99lrm9jcr7joh29i962dpt0lhtmr.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
